--- a/src/package.json
+++ b/src/package.json
@@ -33,6 +33,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.16.4",
     "ms": "^2.1.3",
-    "source-map-support": "^0.5.20"
+    "source-map-support": "^0.5.20",
+    "xlsx": "^0.17.4"
   }
 }
